# serializer version: 1
# name: test_number[number-traeger_0123456789ab_cook_timer-cook_timer_end][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_number[number-traeger_0123456789ab_cook_timer-cook_timer_end][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'integration': 'traeger',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-10.0',
  })
# ---
# name: test_number[number-traeger_0123456789ab_cook_timer-cook_timer_end][03-changed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'integration': 'traeger',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_number[number-traeger_0123456789ab_cook_timer-cook_timer_end][04-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_number[number-traeger_0123456789ab_cook_timer-cook_timer_start][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_number[number-traeger_0123456789ab_cook_timer-cook_timer_start][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'integration': 'traeger',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_number[number-traeger_0123456789ab_cook_timer-cook_timer_start][03-changed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'integration': 'traeger',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-10.0',
  })
# ---
# name: test_number[number-traeger_0123456789ab_cook_timer-cook_timer_start][04-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_number_cookcycle[01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'curr_step': '{}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '{}',
      'prev_step': '{}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_number_cookcycle[02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'curr_step': '{}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '{}',
      'prev_step': '{}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_number_cookcycle[03-CookCycServiceInitd]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '{}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '1: {"set_temp": 225, "act_temp_adv": 220}',
      'prev_step': '{}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_number_cookcycle[04-CookCyleSnapshotsClimActPreAdv]
  '1'
# ---
# name: test_number_cookcycle[05-CookCyleSnapshotsClimActPostAdv]
  '2'
# ---
# name: test_number_cookcycle[06-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '2: {"use_timer": 1, "time_set": 10}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '3: {"set_temp": 375, "use_timer": 1, "time_set": 10}',
      'prev_step': '1: {"set_temp": 225, "act_temp_adv": 220}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_number_cookcycle[07-CookCyleSnapshotsUseTimerPreAdv]
  '2'
# ---
# name: test_number_cookcycle[08-CookCyleSnapshotsUseTimerPostAdv]
  '3'
# ---
# name: test_number_cookcycle[09-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '3: {"set_temp": 375, "use_timer": 1, "time_set": 10}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '4: {"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      'prev_step': '2: {"use_timer": 1, "time_set": 10}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_number_cookcycle[10-CookCyleSnapshotsUseTimerPreAdv]
  '3'
# ---
# name: test_number_cookcycle[11-CookCyleSnapshotsUseTimerPostAdv]
  '4'
# ---
# name: test_number_cookcycle[12-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '4: {"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '5: {"time_set": 10}',
      'prev_step': '3: {"set_temp": 375, "use_timer": 1, "time_set": 10}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
# name: test_number_cookcycle[13-CookCyleSnapshotsProbeActPreAdv]
  '4'
# ---
# name: test_number_cookcycle[14-CookCyleSnapshotsProbeActPostAdv]
  '5'
# ---
# name: test_number_cookcycle[15-CookCyleSnapshotsProbeAlmPreAdv]
  '5'
# ---
# name: test_number_cookcycle[16-CookCyleSnapshotsProbeAlmPostAdv]
  '6'
# ---
# name: test_number_cookcycle[17-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '6: {"use_timer": 1}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '7: {"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      'prev_step': '5: {"time_set": 10}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
# name: test_number_cookcycle[18-CookCyleSnapshotsUseTimerPreAdv]
  '6'
# ---
# name: test_number_cookcycle[19-CookCyleSnapshotsUseTimerPostAdv]
  '7'
# ---
# name: test_number_cookcycle[20-CookCyleSnapshotsProbeAlmPreAdv]
  '7'
# ---
# name: test_number_cookcycle[21-CookCyleSnapshotsProbeAlmPostAdv]
  '7'
# ---
# name: test_number_cookcycle[22-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '7: {"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '8: {"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      'prev_step': '6: {"use_timer": 1}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7',
  })
# ---
# name: test_number_cookcycle[23-CookCyleSnapshotsUseTimerPreAdv]
  '7'
# ---
# name: test_number_cookcycle[24-CookCyleSnapshotsUseTimerPostAdv]
  '8'
# ---
# name: test_number_cookcycle[25-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '8: {"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '9: {"set_temp": 170, "use_timer": 1, "time_set": 10}',
      'prev_step': '7: {"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_number_cookcycle[26-CookCyleSnapshotsUseTimerPreAdv]
  '8'
# ---
# name: test_number_cookcycle[27-CookCyleSnapshotsUseTimerPostAdv]
  '9'
# ---
# name: test_number_cookcycle[28-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '9: {"set_temp": 170, "use_timer": 1, "time_set": 10}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '10: {"time_set": 10, "use_timer": 1, "smoke": 1}',
      'prev_step': '8: {"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9',
  })
# ---
# name: test_number_cookcycle[29-CookCyleSnapshotsUseTimerPreAdv]
  '9'
# ---
# name: test_number_cookcycle[30-CookCyleSnapshotsUseTimerPostAdv]
  '10'
# ---
# name: test_number_cookcycle[31-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '10: {"time_set": 10, "use_timer": 1, "smoke": 1}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '11: {"time_set": 10, "use_timer": 1, "smoke": 0}',
      'prev_step': '9: {"set_temp": 170, "use_timer": 1, "time_set": 10}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_number_cookcycle[32-CookCyleSnapshotsUseTimerPreAdv]
  '10'
# ---
# name: test_number_cookcycle[33-CookCyleSnapshotsUseTimerPostAdv]
  '11'
# ---
# name: test_number_cookcycle[34-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '11: {"time_set": 10, "use_timer": 1, "smoke": 0}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '12: {"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      'prev_step': '10: {"time_set": 10, "use_timer": 1, "smoke": 1}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11',
  })
# ---
# name: test_number_cookcycle[35-CookCyleSnapshotsUseTimerPreAdv]
  '11'
# ---
# name: test_number_cookcycle[36-CookCyleSnapshotsUseTimerPostAdv]
  '12'
# ---
# name: test_number_cookcycle[37-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '12: {"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '13: {"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      'prev_step': '11: {"time_set": 10, "use_timer": 1, "smoke": 0}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_number_cookcycle[38-CookCyleSnapshotsUseTimerPreAdv]
  '12'
# ---
# name: test_number_cookcycle[39-CookCyleSnapshotsUseTimerPostAdv]
  '13'
# ---
# name: test_number_cookcycle[40-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '13: {"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '14: {"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      'prev_step': '12: {"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '13',
  })
# ---
# name: test_number_cookcycle[41-CookCyleSnapshotsMinDeltaPreAdv]
  '15'
# ---
# name: test_number_cookcycle[42-CookCyleSnapshotsMinDeltaPostAdv]
  '15'
# ---
# name: test_number_cookcycle[43-CookCyleSnapshotsProbeAlmPreAdv]
  '15'
# ---
# name: test_number_cookcycle[44-CookCyleSnapshotsProbeAlmPostAdv]
  '16'
# ---
# name: test_number_cookcycle[45-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '16: {"time_set": 10, "set_temp": 210, "use_timer": 1}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '17: {"shutdown": 1}',
      'prev_step': '15: {"min_delta": 40, "max_grill_delta_temp": 250}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '16',
  })
# ---
# name: test_number_cookcycle[46-CookCyleSnapshotsUseTimerPreAdv]
  '16'
# ---
# name: test_number_cookcycle[47-CookCyleSnapshotsUseTimerPostAdv]
  '0'
# ---
# name: test_number_cookcycle[48-TrackedEntity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '{}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '1: {"set_temp": 225, "act_temp_adv": 220}',
      'prev_step': '{}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_number_cookcycle[49-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '_step01': '{"set_temp": 225, "act_temp_adv": 220}',
      '_step02': '{"use_timer": 1, "time_set": 10}',
      '_step03': '{"set_temp": 375, "use_timer": 1, "time_set": 10}',
      '_step04': '{"probe_set_temp": 165, "probe_act_temp_adv": 140}',
      '_step05': '{"time_set": 10}',
      '_step06': '{"use_timer": 1}',
      '_step07': '{"time_set": 10, "use_timer": 1, "keepwarm": 1}',
      '_step08': '{"time_set": 10, "use_timer": 1, "keepwarm": 0}',
      '_step09': '{"set_temp": 170, "use_timer": 1, "time_set": 10}',
      '_step10': '{"time_set": 10, "use_timer": 1, "smoke": 1}',
      '_step11': '{"time_set": 10, "use_timer": 1, "smoke": 0}',
      '_step12': '{"time_set": 15, "smoke": 1, "set_temp": 180, "use_timer": 1}',
      '_step13': '{"probe_set_temp": 210, "time_set": 1080, "min_delta": 30, "max_grill_delta_temp": 225, "probe_act_temp_adv": 160}',
      '_step14': '{"min_delta": 35, "max_grill_delta_temp": 230, "probe_act_temp_adv": 170}',
      '_step15': '{"min_delta": 40, "max_grill_delta_temp": 250}',
      '_step16': '{"time_set": 10, "set_temp": 210, "use_timer": 1}',
      '_step17': '{"shutdown": 1}',
      'curr_step': '{}',
      'friendly_name': "Johny's Traeger Cook_cycle",
      'icon': 'mdi:chef-hat',
      'max': 999,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'next_step': '1: {"set_temp": 225, "act_temp_adv": 220}',
      'prev_step': '{}',
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_number_platform
  list([
    dict({
      'device_class': None,
      'entity_id': 'number.traeger_0123456789ab_cook_cycle',
      'original_name': '0123456789ab_cook_cycle',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_cycle',
    }),
    dict({
      'device_class': None,
      'entity_id': 'number.traeger_0123456789ab_cook_timer',
      'original_name': '0123456789ab_cook_timer',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_timer',
    }),
    dict({
      'device_class': None,
      'entity_id': 'number.traeger_cd0123456789_cook_cycle',
      'original_name': 'cd0123456789_cook_cycle',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_cycle',
    }),
    dict({
      'device_class': None,
      'entity_id': 'number.traeger_cd0123456789_cook_timer',
      'original_name': 'cd0123456789_cook_timer',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_timer',
    }),
  ])
# ---
# name: test_number_settimer[01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_number_settimer[02-ready2cook]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'integration': 'traeger',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_number_settimer[02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'integration': 'traeger',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_number_settimer[03-TrackedEntities]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'attribution': '',
        'friendly_name': "Johny's Traeger Cook_timer",
        'icon': 'mdi:timer',
        'integration': 'traeger',
        'max': 1440,
        'min': 0,
        'mode': <NumberMode.AUTO: 'auto'>,
        'step': 1,
        'unit_of_measurement': 'min',
      }),
      'context': <ANY>,
      'entity_id': 'number.traeger_0123456789ab_cook_timer',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '60.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'attribution': '',
        'device_class': 'timestamp',
        'friendly_name': "Johny's Traeger Cook Timer Start",
        'icon': 'mdi:timer',
        'integration': 'traeger',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.traeger_0123456789ab_cook_timer_start',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '2020-01-01T00:00:00+00:00',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'attribution': '',
        'device_class': 'timestamp',
        'friendly_name': "Johny's Traeger Cook Timer End",
        'icon': 'mdi:timer',
        'integration': 'traeger',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.traeger_0123456789ab_cook_timer_end',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '2020-01-01T01:00:00+00:00',
    }),
  ])
# ---
# name: test_number_settimer[04-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Cook_timer",
      'icon': 'mdi:timer',
      'max': 1440,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': 'min',
    }),
    'context': <ANY>,
    'entity_id': 'number.traeger_0123456789ab_cook_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
